--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chartjs-chart-graph-dot-parser",
   "description": "Graphviz DOT parser utility for chartjs-chart-graph",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0",
   "author": {
     "name": "Samuel Gratzl",
     "email": "samu@sgratzl.com",
